# perplexica-mcp-server

./: .gitignore  LICENSE  README.md  README_zh.md  env.example  pyproject.toml  requirements.txt
perplexica_mcp_server/: __init__.py  client.py  init.py  models.py  server.py
test/: test_client.py  test_official_api.py
